@@ -31,7 +31,11 @@ TEMEtoITRF(position_TEME, velocity_TEME, dateTime)
   of an object in TEME frame, in m/s.
   }
   \item{dateTime}{Date-time string with the date and time in UTC corresponding
-  to the provided position and velocity vectors.
+  to the provided position and velocity vectors. This specifies the time for 
+  which the conversion from TEME to ITRF coordinates will be performed. It is
+  important to provide an accurate value, since the point over the surface of
+  Earth to which a set of TEME coordinates refers varies with time due to
+  the motion of Earth.
   }
 }
 \value{
